@@ -12,6 +12,9 @@
 [+] Administration: Paramètres > Options d'affichage > Éditer les fichiers du thème : edition des fichiers dans les sous-dossiers
 [+] Amélioration de la traduction en allemand (contribution Jürgen K.)
 [+] plxShow::comMessage() : ajout parametre format (variable #com_message)
+[+] plxShow: ajout de la méthode artCatIds()
+[+] plxShow: ajout de la méthode artActiveCatId()
+[-] plxShow: suppression de la méthode artCatId()
 [-] Administration: Paramètres > Configuration avancée -> Suppression du choix de l'emplacement des fichiers .xml
 BUG Pas d'affichage des articles affectés à plusieurs catégories si une catégorie est inactive
 BUG plxShow:pagination(): lien "première page" collé au lien "précédente"
